# resnet-cifar10-sprint

./: README.md  app.py  benchmark.py  demo.py  pyproject.toml  train.py
src/: conv_numpy.py  conv_torch.py  residual.py  resnet.py
tests/: test_conv_numpy.py
tests/tests/: conftest.py
wandb/: latest-run
wandb/offline-run-20251108_232218-ajyvue0g/: run-ajyvue0g.wandb
wandb/offline-run-20251108_232218-ajyvue0g/files/: wandb-metadata.json
wandb/offline-run-20251108_232459-n59bsznz/: run-n59bsznz.wandb
wandb/offline-run-20251108_232459-n59bsznz/files/: wandb-metadata.json
wandb/offline-run-20251108_235554-5h6ofydf/: run-5h6ofydf.wandb
wandb/offline-run-20251108_235554-5h6ofydf/files/: wandb-metadata.json
wandb/offline-run-20251109_021926-3wtgvlcs/: run-3wtgvlcs.wandb
wandb/offline-run-20251109_021926-3wtgvlcs/files/: wandb-metadata.json
