[tool.poetry]
name = "resnet-cifar10"
version = "0.1.0"
description = "ResNet-18 from scratch on CIFAR-10 → FastAPI deploy"
authors = ["Your Name <you@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
torchvision = "^0.18.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pillow = "^10.3.0"
wandb = "^0.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
mypy = "^1.10.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
